<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Vending machine Man</string>
    <string name="title_section1">Vending maintenance</string>
    <string name="title_section2">Goods</string>
    <string name="title_section3">Machine list</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Sync</string>
    <string name="action_settings">Settings</string>
    <string name="comments_cap">Comments:</string>
    <string name="price_cap">Amount:</string>
    <string name="price_hint_cap">Enter the money you spent</string>
    <string name="comments_hint_cap">Any comment if you like</string>
    <string name="nentry_title">Register expense</string>
    <string name="category_add_cap">+ Add new category</string>
    <string name="category_new_cap">New category</string>
    <string name="wallet_add_cap">+ New wallet</string>
    <string name="wallet_new_cap">New wallet</string>
    <string name="err_create_expense">Error while creating the expense...</string>
    <string name="err_zero_qty">Error: Zero or empty amount of money!</string>
    <string name="today_cap">Today</string>
    <string name="yesterday_cap">Yesterday</string>
    <string name="no_items_add_hint" >No items, tap \'+\' to add</string>
    <string name="err_wrong_expression">Wrong math expression</string>
    <string name="your_name_title">Your name (short)</string>
    <string name="user_changed_msg">User name was changed.</string>
    <string name="sync_started_msg">Sync started...</string>
    <string name="sync_done_msg">Sync is done...</string>
    <string name="sync_error_msg">Sync failed! Please, try later...</string>
    <string name="other_title">Others</string>
    <string name="action_search">Search</string>
    <string name="action_search_hint">Search text</string>
    <string name="nentry_edit_title">Edit record</string>
    <string name="item_deleted_cap">Deleted</string>
    <string name="category_name_cap">Category name:</string>
    <string name="category_new_name_hint">Enter new category name</string>
    <string name="category_parent_choose">Choose parent category</string>
    <string name="category_no_parent">Top level category</string>
    <string name="category_edit_cap">Edit category</string>
    <string name="calc_title">Calculator</string>
    <string name="err_calc_empty">Nothing to calculate!</string>
    <string name="err_calc_wrong_expr">Error: Incorrect expression!</string>
    <string name="fab_back_cap">Back to view</string>
    <string name="fab_expense_cap">Register Expenses</string>
    <string name="fab_income_cap">Add Income</string>
    <string name="fab_transfer_cap">Transfer between wallets</string>
    <string name="nentry_add_income_title">Add Income</string>
    <string name="title_section4">Supply Orders</string>
    <string name="last_correction_lbl">Last correction date:</string>
    <string name="last_cor_amount_lbl">Correction amount:</string>
    <string name="wallet_name_hint">Enter wallet name</string>
    <string name="balance_wallet_hint">Enter balance amount</string>
    <string name="wallet_name_cap">Name:</string>
    <string name="nwall_title_new">New wallet</string>
    <string name="nwall_title_edit">Edit wallet</string>
    <string name="err_zero_name">Error: empty name is not allowed</string>
    <string name="category_none_lbl">Choose category</string>
    <string name="last_cor_balance">Balance since correction:</string>
    <string name="noti_expense_changed_body">%1$s has just changed %2$d expenses. Click to see...</string>
    <string name="noti_expense_changed_title">Xpenses changed by %1$s</string>
    <string name="pref_sync_category">Server Synchronization</string>
    <string name="pref_server_sync_title">Use server synchronization</string>
    <string name="pref_use_server_sync_det">Synchronize your data with our server. Adds multi-user mode for family expenses.</string>
    <string name="pref_user_name_title">User name</string>
    <string name="pref_user_name_det">User name for this device to mark your expenses. Usually it\'s your own name or nick.</string>
    <string name="title_section5">Settings</string>
    <string name="pref_sync_pin_title">Pin code for group access</string>
    <string name="pref_sync_pin_det">Pin code for accessing your family group on the server.</string>
    <string name="pref_noti_category">Notifications</string>
    <string name="pref_use_noti_title">Notification on changes</string>
    <string name="pref_use_noti_det">Notify me on any expense changes made by others in my group</string>
    <string name="pref_use_noti_sound_title">Play notification sound</string>
    <string name="pref_use_noti_sound_det">Play default sound on notification occurrence</string>
    <string name="pref_use_noti_vibro_title">Vibrate on notification</string>
    <string name="pref_use_noti_vibro_det">Vibrate on notification occurrence</string>
    <string name="enter_name_hint">Enter name here</string>
    <string name="tag_name_cap">Tags:</string>
    <string name="tag_hint">Tags go here</string>
    <string name="descr_cap">Description:</string>
    <string name="descr_hint">Description goes here</string>
    <string name="goods_edit_title">Edit Goods</string>
    <string name="goods_new_title">New Goods</string>
    <string name="machine_edit_title">Edit Vending machine</string>
    <string name="machine_new_title">New Vending machine</string>
    <string name="maintenance_date_cap">Maintenance date:</string>
    <string name="accounting_date_cap">Accounting date:</string>
    <string name="machine_cap">Vending machine</string>
    <string name="maintenance_cap">Maintenance</string>
    <string name="accounting_cap">Accounting</string>
    <string name="status_cap">Status:</string>
    <string name="replenished_qty_cap">Replenished qty:</string>
    <string name="now_label">now</string>
    <string name="status_opened">Processing</string>
    <string name="status_done">Done</string>
    <string name="maintenance_started_toast">New maintenance has just been started</string>
    <string name="duration_cap">Duration (HH:MM):</string>
    <string name="coins_counter_cap">Coins counter:</string>
    <string name="banknotes_cap">Banknote counter:</string>
    <string name="total_counter_cap">Overall counter:</string>
    <string name="date_from_cap">From:</string>
    <string name="enter_qty_cap">Enter quantity</string>
    <string name="close_cap">Close</string>
    <string name="close_maintenance_title">Close this maintenance?</string>
    <string name="already_closed_toast">Maintenance has already been closed</string>
    <string name="date_to_cap">To:</string>
    <string name="edit_maintenance_dates_title">Edit maintenance dates</string>
    <string name="new_accounting_title">Create new account record</string>
    <string name="edit_accounting_title">Edit account record</string>
    <string name="unlock_maintenance_title">Unlock maintenance for editing?</string>
    <string name="unlock_order_title">Unlock order for editing?</string>
    <string name="order_date_cap">Order date:</string>
    <string name="order_num">Order #</string>
    <string name="ordered_qty_cap">Ordered qty:</string>
    <string name="close_order_title">Close this order?</string>
    <string name="enter_order_qty_cap">Enter quantity to order</string>
    <string name="open_xls">Open report with</string>
    <string name="rep_order_header">Supply Order number %1$d of %2$s</string>
    <string name="rep_goods_name">Goods name</string>
    <string name="rep_quiantity">Quantity</string>

    <string name="rep_maintenance_head">Maintenance report for %1$s</string>
    <string name="rep_maintenance_period">Period from %1$s to %2$s</string>
    <string name="rep_maintenance_repl">Replenishment info</string>
    <string name="rep_total">Total</string>
    <string name="enter_months_title">Choose desired period of time</string>
    <string name="choose_cur_month">%1$s (Current month)</string>
    <string name="choose_prev_month">%1$s (Previous month)</string>
    <string name="choose_preprev_month">%1$s (Two months back)</string>
    <string name="rep_accounting_repl">Accounting info</string>
    <string name="rep_accounting_count_total">Count total</string>
    <string name="rep_accounting_count_coins">Count coins</string>
    <string name="rep_accounting_count_banknotes">Count banknotes</string>
    <string name="rep_accounting_what">Accouning type</string>
    <string name="rep_accounting_inc">Increase</string>
</resources>
