<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/wallet_name_cap"
        android:id="@+id/textView9"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/emachine_name_edit"
        android:hint="@string/enter_name_hint"
        android:inputType="textCapSentences"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/descr_cap"
        android:id="@+id/textView09"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/emachine_desc_edit"
        android:hint="@string/descr_hint"
        android:inputType="textMultiLine|textCapSentences"
        android:lines="3"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tag_name_cap"
        android:id="@+id/textView19"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/emachine_tags_edit"
        android:hint="@string/tag_hint"
        android:inputType="textCapCharacters"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="0dp"
        >

        <Button
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@android:string/cancel"
            android:id="@+id/emachine_cancel_but"
            android:minHeight="50dp"
            android:minWidth="90dp"
            style="?android:attr/borderlessButtonStyle"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?android:attr/dividerVertical"
            />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"
            android:text="@android:string/ok"
            android:id="@+id/emachine_ok_but"
            android:minHeight="50dp"
            android:minWidth="90dp"
            />

    </LinearLayout>
</LinearLayout>
