<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/acclist_maint_lay">
<LinearLayout
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/acclist_maint_info_lay">
    <TextView
        android:id="@+id/acclist_acc_desc"
        android:text="Нет данных"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/abc_primary_text_material_light"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ellipsize="marquee"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:textSize="16sp"
        android:textStyle="normal"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:text="@string/coins_counter_cap"
            android:id="@+id/acclist_20"
            android:layout_marginBottom="3dp"
            android:ellipsize="marquee"
            android:singleLine="false"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="12sp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:text="0"
            android:id="@+id/acclist_acc_qty1"
            android:layout_marginBottom="3dp"
            android:ellipsize="marquee"
            android:singleLine="false"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="12sp"
            android:gravity="right"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:text="@string/banknotes_cap"
            android:id="@+id/acclist_21"
            android:layout_marginBottom="3dp"
            android:ellipsize="marquee"
            android:singleLine="false"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="12sp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:text="0"
            android:id="@+id/acclist_acc_qty2"
            android:layout_marginBottom="3dp"
            android:ellipsize="marquee"
            android:singleLine="false"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="12sp"
            android:gravity="right"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:text="@string/total_counter_cap"
            android:id="@+id/acclist_23"
            android:layout_marginBottom="3dp"
            android:ellipsize="marquee"
            android:singleLine="false"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="12sp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:text="0"
            android:id="@+id/acclist_acc_qty3"
            android:layout_marginBottom="3dp"
            android:ellipsize="marquee"
            android:singleLine="false"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="12sp"
            android:gravity="right"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItemSmall"
        android:text="Comments"
        android:id="@+id/acclist_acc_comment"
        android:layout_marginBottom="3dp"
        android:textColor="@color/abc_secondary_text_material_light"
        android:ellipsize="marquee"
        android:singleLine="false"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="12sp"/>
</LinearLayout>
<LinearLayout
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/bgDarkGrayTrans"
android:orientation="horizontal"
android:id="@+id/acclist_deleted_lay"
android:visibility="gone"
    >

<TextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/item_deleted_cap"
    android:id="@+id/textView3"
    android:layout_gravity="center_vertical"
    android:layout_weight="1"
    android:textColor="@android:color/white"
    android:layout_marginLeft="20dp"
    />

<Button
    style="?android:attr/borderlessButtonStyle"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:text="@android:string/cancel"
    android:id="@+id/acclist_undo_btn"
    android:layout_gravity="center_vertical"
    android:layout_marginRight="3dp"
    android:background="@color/bgDarkGray"
    android:maxWidth="110dp"
    android:textColor="@color/md_orange_500"/>
</LinearLayout>
</FrameLayout>
