<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/maintlist_maint_lay">
        <TextView
            android:id="@+id/maintlist_main_top"
            android:text="Нет данных"
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/abc_primary_text_material_light"
            android:textStyle="normal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:ellipsize="marquee"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:text="Description"
            android:id="@+id/maintlist_comment"
            android:layout_marginBottom="3dp"
            android:textColor="@color/abc_secondary_text_material_light"
            android:ellipsize="marquee"
            android:singleLine="false"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="12sp"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"
                android:text="@string/status_cap"
                android:id="@+id/maintlist_1"
                android:layout_marginBottom="3dp"
                android:ellipsize="marquee"
                android:textColor="@color/md_blue_600"
                android:singleLine="false"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"
                android:text="Unknown"
                android:id="@+id/maintlist_status"
                android:layout_marginBottom="3dp"
                android:ellipsize="marquee"
                android:singleLine="false"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textSize="12sp"
                android:textColor="@color/md_blue_600"
                android:gravity="right"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"
                android:text="@string/duration_cap"
                android:id="@+id/maintlist_3"
                android:layout_marginBottom="3dp"
                android:ellipsize="marquee"
                android:singleLine="false"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"
                android:text="0"
                android:id="@+id/maintlist_duration"
                android:layout_marginBottom="3dp"
                android:ellipsize="marquee"
                android:singleLine="false"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textSize="12sp"
                android:gravity="right"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"
                android:text="@string/replenished_qty_cap"
                android:id="@+id/maintlist_2"
                android:layout_marginBottom="3dp"
                android:ellipsize="marquee"
                android:singleLine="false"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"
                android:text="0"
                android:id="@+id/maintlist_qty"
                android:layout_marginBottom="3dp"
                android:ellipsize="marquee"
                android:singleLine="false"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textSize="12sp"
                android:gravity="right"
                android:textStyle="bold"/>
        </LinearLayout>

</LinearLayout>
