<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/account_relative">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:divider="?android:attr/dividerVertical">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tue 10 Mar 2015"
            android:id="@+id/account_fromdate_but"
            android:layout_weight="6"
            android:layout_marginRight="5dp"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/roundedrect_but"
            android:textColor="@color/white"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="23:45"
            android:id="@+id/account_fromtime_but"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:textColor="@color/white"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/roundedrect_but"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:divider="?android:attr/dividerVertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/coins_counter_cap"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:textSize="16sp"
            />

        <EditText
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/account_coins"
            android:gravity="right"/>


    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:divider="?android:attr/dividerVertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/banknotes_cap"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:textSize="16sp"
            />

        <EditText
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:gravity="right"
            android:id="@+id/account_banknotes"
            />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:divider="?android:attr/dividerVertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/total_counter_cap"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:textSize="16sp"
            />

        <EditText
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:gravity="right"
            android:id="@+id/account_overall"
            />


    </LinearLayout>
    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/dividerVertical"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_below="@+id/account_edit"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:divider="?android:attr/dividerVertical">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            android:id="@+id/account_cancel_but"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"
        />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?android:attr/dividerVertical"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/ok"
            android:id="@+id/account_ok_but"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"
            />
        </LinearLayout>
</LinearLayout>
